k8s/trash/1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-api-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: user-api
  template:
    metadata:
      labels:
        app: user-api
    spec:
      containers:
        - name: user-api
          image: ratiborro/otus-user-api:latest
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 600        # Задержка перед началом пробы
            timeoutSeconds: 60              # Время ожидания ответа на пробу
            periodSeconds: 60               # Периодичность проверок
            failureThreshold: 10            # Количество неудачных проверок до перезапуска контейнера
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 600        # Задержка перед началом пробы
            timeoutSeconds: 60              # Время ожидания ответа на пробу
            periodSeconds: 60               # Периодичность проверок
            failureThreshold: 10            # Количество неудачных проверок до перезапуска контейнера
      volumes:
        - name: app-volume
          emptyDir: {}
